# picopad

./: CMakeLists.txt  setup.sh
config/: keymap_config.h  tusb_config.h
docs/: architecture.md
src/: keymap.c  keymap.h  keys.c  keys.h  main.c  usb_descriptors.c  usb_hid.c  usb_hid.h
